--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <style>
         body 
             {
-              background-image: url("../imagens/figma1.jpg");
+              background-image: url("imagens/figma1.jpg");
               background-size: cover;
               font-family: Arial, Helvetica, sans-serif;
               margin: 0 auto;
