--- a/galeria.html
+++ b/galeria.html
@@ -20,7 +20,7 @@
 <style>
     body 
         {
-          background-image: url("../imagens/figma3.jpg");
+          background-image: url("imagens/figma3.jpg");
           background-size: cover;
           font-family: Arial, Helvetica, sans-serif;
           margin: 0 auto;
