--- a/produto.html
+++ b/produto.html
@@ -31,7 +31,7 @@
         <style>
             body 
                 {
-                  background-image: url("../imagens/figma2.jpg");
+                  background-image: url("imagens/figma2.jpg");
                   background-size: cover;
                   font-family: Arial, Helvetica, sans-serif;
                   margin: 0 auto;
