--- a/galeria.html
+++ b/galeria.html
@@ -38,7 +38,7 @@
 <style>
     body 
         {
-          background-image: url("../imagens/figma4.jpg");
+          background-image: url("imagens/figma4.jpg");
           background-size: cover;
           font-family: Arial, Helvetica, sans-serif;
           margin: 0 auto;
